Práctica 6/y.output
State 139 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 $@1: /* empty */

    2 Programa: Cabecera_programa $@1 bloque

    3 Cabecera_programa: PROG IDENT
    4                  | error

    5 $@2: /* empty */

    6 $@3: /* empty */

    7 bloque: BEG $@2 Declar_de_variables_locales $@3 Declar_de_subprogs Sentencias END

    8 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    9                   | /* empty */

   10 Declar_subprog: Cabecera_subprog bloque

   11 $@4: /* empty */

   12 $@5: /* empty */

   13 @6: /* empty */

   14 Cabecera_subprog: FUNCTION IDENT PARI $@4 Cuerpo_declar_variables $@5 PARD DOSPU tipo_dato @6 PYC

   15 Declar_de_variables_locales: VAR Cuerpo_declar_variables ENDVAR
   16                            | /* empty */

   17 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU tipo_dato PYC
   18                        | error
   19                        | /* empty */

   20 lista_identificadores: lista_identificadores COMA IDENT
   21                      | IDENT

   22 tipo_dato: TIPOBASICO
   23          | tipo_dato_B

   24 tipo_dato_B: LISTOF TIPOBASICO

   25 Sentencias: Sentencias Sentencia
   26           | /* empty */

   27 Sentencia: bloque
   28          | sentencia_if
   29          | sentencia_while
   30          | sentencia_for
   31          | sentencias_PYC PYC
   32          | error

   33 sentencia_if: alternativa_simple

   34 $@7: /* empty */

   35 $@8: /* empty */

   36 alternativa_simple: IF expresion $@7 THEN Sentencia $@8 alternativa_doble

   37 $@9: /* empty */

   38 alternativa_doble: ELSE $@9 Sentencia
   39                  | /* empty */

   40 $@10: /* empty */

   41 $@11: /* empty */

   42 sentencia_while: WHILE $@10 expresion $@11 DO Sentencia

   43 $@12: /* empty */

   44 $@13: /* empty */

   45 $@14: /* empty */

   46 sentencia_for: FOR $@12 sentencia_asignacion $@13 TO expresion $@14 DO Sentencia

   47 sentencias_PYC: sentencia_return
   48               | sentencia_avance_retroceso
   49               | sentencia_asignacion
   50               | sentencia_cursor_comienzo
   51               | sentencia_entrada
   52               | sentencia_salida

   53 sentencia_return: RETURN expresion

   54 sentencia_asignacion: IDENT ASIG expresion

   55 sentencia_avance_retroceso: IDENT RETAV

   56 sentencia_cursor_comienzo: DOLAR IDENT

   57 sentencia_entrada: SCAN lista_variables

   58 sentencia_salida: PRINT lista_expresiones_o_cadena

   59 expresion: PARI expresion PARD
   60          | MASMENOS expresion
   61          | OPUNA expresion

   62 @15: /* empty */

   63 expresion: expresion MASMENOS @15 expresion

   64 @16: /* empty */

   65 expresion: expresion MULDIV @16 expresion
   66          | expresion OPOR expresion
   67          | expresion OPAND expresion
   68          | expresion OPIGUALDAD expresion
   69          | expresion OPRELACION expresion
   70          | expresion OPLISTA expresion
   71          | expresion OPTER2 expresion
   72          | expresion OPTER1 expresion OPTER2 expresion
   73          | IDENT
   74          | CONST
   75          | agregado
   76          | funcion
   77          | error

   78 lista_variables: lista_variables COMA IDENT
   79                | IDENT

   80 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA exp_cad
   81                           | exp_cad

   82 exp_cad: expresion
   83        | CAD

   84 agregado: CORI lista_constantes CORD

   85 lista_constantes: lista_constantes COMA CONST
   86                 | CONST

   87 @17: /* empty */

   88 funcion: IDENT @17 PARI lista_exp_vacia PARD

   89 $@18: /* empty */

   90 lista_exp_vacia: $@18 lista_expresiones
   91                | /* empty */

   92 lista_expresiones: lista_expresiones COMA expresion
   93                  | expresion


Terminals, with rules where they appear

$end (0) 0
error (256) 4 18 32 77
MASMENOS (258) 60 63
OPUNA (259) 61
CONST (260) 74 85 86
IDENT (261) 3 14 20 21 54 55 56 73 78 79 88
CAD (262) 83
PARI (263) 14 59 88
PARD (264) 14 59 88
COMA (265) 20 78 80 85 92
PYC (266) 14 17 31
PRINT (267) 58
SCAN (268) 57
IF (269) 36
THEN (270) 36
ELSE (271) 38
WHILE (272) 42
DO (273) 42 46
FOR (274) 46
TO (275) 46
TIPOBASICO (276) 22 24
LISTOF (277) 24
BEG (278) 7
END (279) 7
VAR (280) 15
ENDVAR (281) 15
PROG (282) 3
FUNCTION (283) 14
RETURN (284) 53
ASIG (285) 54
CORD (286) 84
CORI (287) 84
DOSPU (288) 14 17
OPTER1 (289) 72
OPTER2 (290) 71 72
DOLAR (291) 56
RETAV (292) 55
OPOR (293) 66
OPAND (294) 67
MULDIV (295) 65
OPIGUALDAD (296) 68
OPRELACION (297) 69
OPLISTA (298) 70


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Programa (45)
    on left: 2, on right: 0
$@1 (46)
    on left: 1, on right: 2
Cabecera_programa (47)
    on left: 3 4, on right: 2
bloque (48)
    on left: 7, on right: 2 10 27
$@2 (49)
    on left: 5, on right: 7
$@3 (50)
    on left: 6, on right: 7
Declar_de_subprogs (51)
    on left: 8 9, on right: 7 8
Declar_subprog (52)
    on left: 10, on right: 8
Cabecera_subprog (53)
    on left: 14, on right: 10
$@4 (54)
    on left: 11, on right: 14
$@5 (55)
    on left: 12, on right: 14
@6 (56)
    on left: 13, on right: 14
Declar_de_variables_locales (57)
    on left: 15 16, on right: 7
Cuerpo_declar_variables (58)
    on left: 17 18 19, on right: 14 15 17
lista_identificadores (59)
    on left: 20 21, on right: 17 20
tipo_dato (60)
    on left: 22 23, on right: 14 17
tipo_dato_B (61)
    on left: 24, on right: 23
Sentencias (62)
    on left: 25 26, on right: 7 25
Sentencia (63)
    on left: 27 28 29 30 31 32, on right: 25 36 38 42 46
sentencia_if (64)
    on left: 33, on right: 28
alternativa_simple (65)
    on left: 36, on right: 33
$@7 (66)
    on left: 34, on right: 36
$@8 (67)
    on left: 35, on right: 36
alternativa_doble (68)
    on left: 38 39, on right: 36
$@9 (69)
    on left: 37, on right: 38
sentencia_while (70)
    on left: 42, on right: 29
$@10 (71)
    on left: 40, on right: 42
$@11 (72)
    on left: 41, on right: 42
sentencia_for (73)
    on left: 46, on right: 30
$@12 (74)
    on left: 43, on right: 46
$@13 (75)
    on left: 44, on right: 46
$@14 (76)
    on left: 45, on right: 46
sentencias_PYC (77)
    on left: 47 48 49 50 51 52, on right: 31
sentencia_return (78)
    on left: 53, on right: 47
sentencia_asignacion (79)
    on left: 54, on right: 46 49
sentencia_avance_retroceso (80)
    on left: 55, on right: 48
sentencia_cursor_comienzo (81)
    on left: 56, on right: 50
sentencia_entrada (82)
    on left: 57, on right: 51
sentencia_salida (83)
    on left: 58, on right: 52
expresion (84)
    on left: 59 60 61 63 65 66 67 68 69 70 71 72 73 74 75 76 77, on right:
    36 42 46 53 54 59 60 61 63 65 66 67 68 69 70 71 72 82 92 93
@15 (85)
    on left: 62, on right: 63
@16 (86)
    on left: 64, on right: 65
lista_variables (87)
    on left: 78 79, on right: 57 78
lista_expresiones_o_cadena (88)
    on left: 80 81, on right: 58 80
exp_cad (89)
    on left: 82 83, on right: 80 81
agregado (90)
    on left: 84, on right: 75
lista_constantes (91)
    on left: 85 86, on right: 84 85
funcion (92)
    on left: 88, on right: 76
@17 (93)
    on left: 87, on right: 88
lista_exp_vacia (94)
    on left: 90 91, on right: 88
$@18 (95)
    on left: 89, on right: 90
lista_expresiones (96)
    on left: 92 93, on right: 90 92


state 0

    0 $accept: . Programa $end

    error  shift, and go to state 1
    PROG   shift, and go to state 2

    Programa           go to state 3
    Cabecera_programa  go to state 4


state 1

    4 Cabecera_programa: error .

    $default  reduce using rule 4 (Cabecera_programa)


state 2

    3 Cabecera_programa: PROG . IDENT

    IDENT  shift, and go to state 5


state 3

    0 $accept: Programa . $end

    $end  shift, and go to state 6


state 4

    2 Programa: Cabecera_programa . $@1 bloque

    $default  reduce using rule 1 ($@1)

    $@1  go to state 7


state 5

    3 Cabecera_programa: PROG IDENT .

    $default  reduce using rule 3 (Cabecera_programa)


state 6

    0 $accept: Programa $end .

    $default  accept


state 7

    2 Programa: Cabecera_programa $@1 . bloque

    BEG  shift, and go to state 8

    bloque  go to state 9


state 8

    7 bloque: BEG . $@2 Declar_de_variables_locales $@3 Declar_de_subprogs Sentencias END

    $default  reduce using rule 5 ($@2)

    $@2  go to state 10


state 9

    2 Programa: Cabecera_programa $@1 bloque .

    $default  reduce using rule 2 (Programa)


state 10

    7 bloque: BEG $@2 . Declar_de_variables_locales $@3 Declar_de_subprogs Sentencias END

    VAR  shift, and go to state 11

    $default  reduce using rule 16 (Declar_de_variables_locales)

    Declar_de_variables_locales  go to state 12


state 11

   15 Declar_de_variables_locales: VAR . Cuerpo_declar_variables ENDVAR

    error  shift, and go to state 13

    IDENT   reduce using rule 19 (Cuerpo_declar_variables)
    ENDVAR  reduce using rule 19 (Cuerpo_declar_variables)

    Cuerpo_declar_variables  go to state 14


state 12

    7 bloque: BEG $@2 Declar_de_variables_locales . $@3 Declar_de_subprogs Sentencias END

    $default  reduce using rule 6 ($@3)

    $@3  go to state 15


state 13

   18 Cuerpo_declar_variables: error .

    $default  reduce using rule 18 (Cuerpo_declar_variables)


state 14

   15 Declar_de_variables_locales: VAR Cuerpo_declar_variables . ENDVAR
   17 Cuerpo_declar_variables: Cuerpo_declar_variables . lista_identificadores DOSPU tipo_dato PYC

    IDENT   shift, and go to state 16
    ENDVAR  shift, and go to state 17

    lista_identificadores  go to state 18


state 15

    7 bloque: BEG $@2 Declar_de_variables_locales $@3 . Declar_de_subprogs Sentencias END

    $default  reduce using rule 9 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 19


state 16

   21 lista_identificadores: IDENT .

    $default  reduce using rule 21 (lista_identificadores)


state 17

   15 Declar_de_variables_locales: VAR Cuerpo_declar_variables ENDVAR .

    $default  reduce using rule 15 (Declar_de_variables_locales)


state 18

   17 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores . DOSPU tipo_dato PYC
   20 lista_identificadores: lista_identificadores . COMA IDENT

    COMA   shift, and go to state 20
    DOSPU  shift, and go to state 21


state 19

    7 bloque: BEG $@2 Declar_de_variables_locales $@3 Declar_de_subprogs . Sentencias END
    8 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    FUNCTION  shift, and go to state 22

    $default  reduce using rule 26 (Sentencias)

    Declar_subprog    go to state 23
    Cabecera_subprog  go to state 24
    Sentencias        go to state 25


state 20

   20 lista_identificadores: lista_identificadores COMA . IDENT

    IDENT  shift, and go to state 26


state 21

   17 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU . tipo_dato PYC

    TIPOBASICO  shift, and go to state 27
    LISTOF      shift, and go to state 28

    tipo_dato    go to state 29
    tipo_dato_B  go to state 30


state 22

   14 Cabecera_subprog: FUNCTION . IDENT PARI $@4 Cuerpo_declar_variables $@5 PARD DOSPU tipo_dato @6 PYC

    IDENT  shift, and go to state 31


state 23

    8 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 8 (Declar_de_subprogs)


state 24

   10 Declar_subprog: Cabecera_subprog . bloque

    BEG  shift, and go to state 8

    bloque  go to state 32


state 25

    7 bloque: BEG $@2 Declar_de_variables_locales $@3 Declar_de_subprogs Sentencias . END
   25 Sentencias: Sentencias . Sentencia

    error   shift, and go to state 33
    IDENT   shift, and go to state 34
    PRINT   shift, and go to state 35
    SCAN    shift, and go to state 36
    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    FOR     shift, and go to state 39
    BEG     shift, and go to state 8
    END     shift, and go to state 40
    RETURN  shift, and go to state 41
    DOLAR   shift, and go to state 42

    bloque                      go to state 43
    Sentencia                   go to state 44
    sentencia_if                go to state 45
    alternativa_simple          go to state 46
    sentencia_while             go to state 47
    sentencia_for               go to state 48
    sentencias_PYC              go to state 49
    sentencia_return            go to state 50
    sentencia_asignacion        go to state 51
    sentencia_avance_retroceso  go to state 52
    sentencia_cursor_comienzo   go to state 53
    sentencia_entrada           go to state 54
    sentencia_salida            go to state 55


state 26

   20 lista_identificadores: lista_identificadores COMA IDENT .

    $default  reduce using rule 20 (lista_identificadores)


state 27

   22 tipo_dato: TIPOBASICO .

    $default  reduce using rule 22 (tipo_dato)


state 28

   24 tipo_dato_B: LISTOF . TIPOBASICO

    TIPOBASICO  shift, and go to state 56


state 29

   17 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU tipo_dato . PYC

    PYC  shift, and go to state 57


state 30

   23 tipo_dato: tipo_dato_B .

    $default  reduce using rule 23 (tipo_dato)


state 31

   14 Cabecera_subprog: FUNCTION IDENT . PARI $@4 Cuerpo_declar_variables $@5 PARD DOSPU tipo_dato @6 PYC

    PARI  shift, and go to state 58


state 32

   10 Declar_subprog: Cabecera_subprog bloque .

    $default  reduce using rule 10 (Declar_subprog)


state 33

   32 Sentencia: error .

    $default  reduce using rule 32 (Sentencia)


state 34

   54 sentencia_asignacion: IDENT . ASIG expresion
   55 sentencia_avance_retroceso: IDENT . RETAV

    ASIG   shift, and go to state 59
    RETAV  shift, and go to state 60


state 35

   58 sentencia_salida: PRINT . lista_expresiones_o_cadena

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    CAD       shift, and go to state 66
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion                   go to state 69
    lista_expresiones_o_cadena  go to state 70
    exp_cad                     go to state 71
    agregado                    go to state 72
    funcion                     go to state 73


state 36

   57 sentencia_entrada: SCAN . lista_variables

    IDENT  shift, and go to state 74

    lista_variables  go to state 75


state 37

   36 alternativa_simple: IF . expresion $@7 THEN Sentencia $@8 alternativa_doble

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 76
    agregado   go to state 72
    funcion    go to state 73


state 38

   42 sentencia_while: WHILE . $@10 expresion $@11 DO Sentencia

    $default  reduce using rule 40 ($@10)

    $@10  go to state 77


state 39

   46 sentencia_for: FOR . $@12 sentencia_asignacion $@13 TO expresion $@14 DO Sentencia

    $default  reduce using rule 43 ($@12)

    $@12  go to state 78


state 40

    7 bloque: BEG $@2 Declar_de_variables_locales $@3 Declar_de_subprogs Sentencias END .

    $default  reduce using rule 7 (bloque)


state 41

   53 sentencia_return: RETURN . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 79
    agregado   go to state 72
    funcion    go to state 73


state 42

   56 sentencia_cursor_comienzo: DOLAR . IDENT

    IDENT  shift, and go to state 80


state 43

   27 Sentencia: bloque .

    $default  reduce using rule 27 (Sentencia)


state 44

   25 Sentencias: Sentencias Sentencia .

    $default  reduce using rule 25 (Sentencias)


state 45

   28 Sentencia: sentencia_if .

    $default  reduce using rule 28 (Sentencia)


state 46

   33 sentencia_if: alternativa_simple .

    $default  reduce using rule 33 (sentencia_if)


state 47

   29 Sentencia: sentencia_while .

    $default  reduce using rule 29 (Sentencia)


state 48

   30 Sentencia: sentencia_for .

    $default  reduce using rule 30 (Sentencia)


state 49

   31 Sentencia: sentencias_PYC . PYC

    PYC  shift, and go to state 81


state 50

   47 sentencias_PYC: sentencia_return .

    $default  reduce using rule 47 (sentencias_PYC)


state 51

   49 sentencias_PYC: sentencia_asignacion .

    $default  reduce using rule 49 (sentencias_PYC)


state 52

   48 sentencias_PYC: sentencia_avance_retroceso .

    $default  reduce using rule 48 (sentencias_PYC)


state 53

   50 sentencias_PYC: sentencia_cursor_comienzo .

    $default  reduce using rule 50 (sentencias_PYC)


state 54

   51 sentencias_PYC: sentencia_entrada .

    $default  reduce using rule 51 (sentencias_PYC)


state 55

   52 sentencias_PYC: sentencia_salida .

    $default  reduce using rule 52 (sentencias_PYC)


state 56

   24 tipo_dato_B: LISTOF TIPOBASICO .

    $default  reduce using rule 24 (tipo_dato_B)


state 57

   17 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU tipo_dato PYC .

    $default  reduce using rule 17 (Cuerpo_declar_variables)


state 58

   14 Cabecera_subprog: FUNCTION IDENT PARI . $@4 Cuerpo_declar_variables $@5 PARD DOSPU tipo_dato @6 PYC

    $default  reduce using rule 11 ($@4)

    $@4  go to state 82


state 59

   54 sentencia_asignacion: IDENT ASIG . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 83
    agregado   go to state 72
    funcion    go to state 73


state 60

   55 sentencia_avance_retroceso: IDENT RETAV .

    $default  reduce using rule 55 (sentencia_avance_retroceso)


state 61

   77 expresion: error .

    $default  reduce using rule 77 (expresion)


state 62

   60 expresion: MASMENOS . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 84
    agregado   go to state 72
    funcion    go to state 73


state 63

   61 expresion: OPUNA . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 85
    agregado   go to state 72
    funcion    go to state 73


state 64

   74 expresion: CONST .

    $default  reduce using rule 74 (expresion)


state 65

   73 expresion: IDENT .
   88 funcion: IDENT . @17 PARI lista_exp_vacia PARD

    PARI      reduce using rule 87 (@17)
    $default  reduce using rule 73 (expresion)

    @17  go to state 86


state 66

   83 exp_cad: CAD .

    $default  reduce using rule 83 (exp_cad)


state 67

   59 expresion: PARI . expresion PARD

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 87
    agregado   go to state 72
    funcion    go to state 73


state 68

   84 agregado: CORI . lista_constantes CORD

    CONST  shift, and go to state 88

    lista_constantes  go to state 89


state 69

   63 expresion: expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion
   82 exp_cad: expresion .

    MASMENOS    shift, and go to state 90
    OPTER1      shift, and go to state 91
    OPTER2      shift, and go to state 92
    OPOR        shift, and go to state 93
    OPAND       shift, and go to state 94
    MULDIV      shift, and go to state 95
    OPIGUALDAD  shift, and go to state 96
    OPRELACION  shift, and go to state 97
    OPLISTA     shift, and go to state 98

    $default  reduce using rule 82 (exp_cad)


state 70

   58 sentencia_salida: PRINT lista_expresiones_o_cadena .
   80 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA exp_cad

    COMA  shift, and go to state 99

    $default  reduce using rule 58 (sentencia_salida)


state 71

   81 lista_expresiones_o_cadena: exp_cad .

    $default  reduce using rule 81 (lista_expresiones_o_cadena)


state 72

   75 expresion: agregado .

    $default  reduce using rule 75 (expresion)


state 73

   76 expresion: funcion .

    $default  reduce using rule 76 (expresion)


state 74

   79 lista_variables: IDENT .

    $default  reduce using rule 79 (lista_variables)


state 75

   57 sentencia_entrada: SCAN lista_variables .
   78 lista_variables: lista_variables . COMA IDENT

    COMA  shift, and go to state 100

    $default  reduce using rule 57 (sentencia_entrada)


state 76

   36 alternativa_simple: IF expresion . $@7 THEN Sentencia $@8 alternativa_doble
   63 expresion: expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 90
    OPTER1      shift, and go to state 91
    OPTER2      shift, and go to state 92
    OPOR        shift, and go to state 93
    OPAND       shift, and go to state 94
    MULDIV      shift, and go to state 95
    OPIGUALDAD  shift, and go to state 96
    OPRELACION  shift, and go to state 97
    OPLISTA     shift, and go to state 98

    $default  reduce using rule 34 ($@7)

    $@7  go to state 101


state 77

   42 sentencia_while: WHILE $@10 . expresion $@11 DO Sentencia

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 102
    agregado   go to state 72
    funcion    go to state 73


state 78

   46 sentencia_for: FOR $@12 . sentencia_asignacion $@13 TO expresion $@14 DO Sentencia

    IDENT  shift, and go to state 103

    sentencia_asignacion  go to state 104


state 79

   53 sentencia_return: RETURN expresion .
   63 expresion: expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 90
    OPTER1      shift, and go to state 91
    OPTER2      shift, and go to state 92
    OPOR        shift, and go to state 93
    OPAND       shift, and go to state 94
    MULDIV      shift, and go to state 95
    OPIGUALDAD  shift, and go to state 96
    OPRELACION  shift, and go to state 97
    OPLISTA     shift, and go to state 98

    $default  reduce using rule 53 (sentencia_return)


state 80

   56 sentencia_cursor_comienzo: DOLAR IDENT .

    $default  reduce using rule 56 (sentencia_cursor_comienzo)


state 81

   31 Sentencia: sentencias_PYC PYC .

    $default  reduce using rule 31 (Sentencia)


state 82

   14 Cabecera_subprog: FUNCTION IDENT PARI $@4 . Cuerpo_declar_variables $@5 PARD DOSPU tipo_dato @6 PYC

    error  shift, and go to state 13

    IDENT  reduce using rule 19 (Cuerpo_declar_variables)
    PARD   reduce using rule 19 (Cuerpo_declar_variables)

    Cuerpo_declar_variables  go to state 105


state 83

   54 sentencia_asignacion: IDENT ASIG expresion .
   63 expresion: expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 90
    OPTER1      shift, and go to state 91
    OPTER2      shift, and go to state 92
    OPOR        shift, and go to state 93
    OPAND       shift, and go to state 94
    MULDIV      shift, and go to state 95
    OPIGUALDAD  shift, and go to state 96
    OPRELACION  shift, and go to state 97
    OPLISTA     shift, and go to state 98

    $default  reduce using rule 54 (sentencia_asignacion)


state 84

   60 expresion: MASMENOS expresion .
   63          | expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    $default  reduce using rule 60 (expresion)


state 85

   61 expresion: OPUNA expresion .
   63          | expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    $default  reduce using rule 61 (expresion)


state 86

   88 funcion: IDENT @17 . PARI lista_exp_vacia PARD

    PARI  shift, and go to state 106


state 87

   59 expresion: PARI expresion . PARD
   63          | expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 90
    PARD        shift, and go to state 107
    OPTER1      shift, and go to state 91
    OPTER2      shift, and go to state 92
    OPOR        shift, and go to state 93
    OPAND       shift, and go to state 94
    MULDIV      shift, and go to state 95
    OPIGUALDAD  shift, and go to state 96
    OPRELACION  shift, and go to state 97
    OPLISTA     shift, and go to state 98


state 88

   86 lista_constantes: CONST .

    $default  reduce using rule 86 (lista_constantes)


state 89

   84 agregado: CORI lista_constantes . CORD
   85 lista_constantes: lista_constantes . COMA CONST

    COMA  shift, and go to state 108
    CORD  shift, and go to state 109


state 90

   63 expresion: expresion MASMENOS . @15 expresion

    $default  reduce using rule 62 (@15)

    @15  go to state 110


state 91

   72 expresion: expresion OPTER1 . expresion OPTER2 expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 111
    agregado   go to state 72
    funcion    go to state 73


state 92

   71 expresion: expresion OPTER2 . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 112
    agregado   go to state 72
    funcion    go to state 73


state 93

   66 expresion: expresion OPOR . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 113
    agregado   go to state 72
    funcion    go to state 73


state 94

   67 expresion: expresion OPAND . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 114
    agregado   go to state 72
    funcion    go to state 73


state 95

   65 expresion: expresion MULDIV . @16 expresion

    $default  reduce using rule 64 (@16)

    @16  go to state 115


state 96

   68 expresion: expresion OPIGUALDAD . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 116
    agregado   go to state 72
    funcion    go to state 73


state 97

   69 expresion: expresion OPRELACION . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 117
    agregado   go to state 72
    funcion    go to state 73


state 98

   70 expresion: expresion OPLISTA . expresion

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 118
    agregado   go to state 72
    funcion    go to state 73


state 99

   80 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA . exp_cad

    error     shift, and go to state 61
    MASMENOS  shift, and go to state 62
    OPUNA     shift, and go to state 63
    CONST     shift, and go to state 64
    IDENT     shift, and go to state 65
    CAD       shift, and go to state 66
    PARI      shift, and go to state 67
    CORI      shift, and go to state 68

    expresion  go to state 69
    exp_cad    go to state 119
    agregado   go to state 72
    funcion    go to state 73


state 100

   78 lista_variables: lista_variables COMA . IDENT

    IDENT  shift, and go to state 120


state 101

   36 alternativa_simple: IF expresion $@7 . THEN Sentencia $@8 alternativa_doble

    THEN  shift, and go to state 121


state 102

   42 sentencia_while: WHILE $@10 expresion . $@11 DO Sentencia
   63 expresion: expresion . MASMENOS @15 expresion
   65          | expresion . MULDIV @16 expresion
   66          | expresion . OPOR expresion
   67          | expresion . OPAND expresion
   68          | expresion . OPIGUALDAD expresion
   69          | expresion . OPRELACION expresion
   70          | expresion . OPLISTA expresion
   71          | expresion . OPTER2 expresion
   72          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 90
    OPTER1      shift, and go to state 91
    OPTER2      shift, and go to state 92
    OPOR        shift, and go to state 93
    OPAND       shift, and go to state 94
    MULDIV      shift, and go to state 95
    OPIGUALDAD  shift, and go to state 96
    OPRELACION  shift, and go to state 97
    OPLISTA     shift, and go to state 98

    $default  reduce using rule 41 ($@11)

    $@11  go to state 122


state 103
